Mixing is now live

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -31,9 +31,9 @@
 
     <table id="issues_table">
       <tr>
-        <td class="days_column">Monday</td>    
-        <td class="days_column">Tuesday</td>    
-        <td class="days_column">Wednesday</td>    
+        <td class="days_column">Monday</td>
+        <td class="days_column">Tuesday</td>
+        <td class="days_column">Wednesday</td>
         <td class="days_column">Thursday</td>
         <td class="days_column">Friday</td>
       </tr>
@@ -48,35 +48,26 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</div>
-              <button type="button" class="categories Quality"   id="Quality">Quality</div>
-              <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</div>
-              <button type="button" class="categories Inventory" id="Inventory">Inventory</div>
-              <button type="button" class="categories Scrap"     id="Scrap">Scrap</div>
+              <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</button>
+              <button type="button" class="categories Quality"   id="Quality">Quality</button>
+              <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</button>
+              <button type="button" class="categories Inventory" id="Inventory">Inventory</button>
+              <button type="button" class="categories Scrap"     id="Scrap">Scrap</button>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <button type="button" class="categories Hr"        id="Hr">HR/ Labor</div>
-              <button type="button" class="categories Delivery"  id="Delivery">Delivery</div>
-              <button type="button" class="categories Operation" id="Operation">Operations Efficiency</div>
-              <button type="button" class="categories Supply"    id="Supply">Supply Chain</div>
-              <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</div>
+              <button type="button" class="categories Hr"        id="Hr">HR/ Labor</button>
+              <button type="button" class="categories Delivery"  id="Delivery">Delivery</button>
+              <button type="button" class="categories Operation" id="Operation">Operations Efficiency</button>
+              <button type="button" class="categories Supply"    id="Supply">Supply Chain</button>
+              <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</button>
           </td>
       </tr>
     </table>
 
     <div class="mycontainer">
-      <table class="page-footer">
-        <tr>
-          <!--<td class="btn btn-white table_button" id="new_alert_redirect">Create new e-Lert</td>
-
-          <td><a href="mixing.html" class="btn btn-white table_button" id="mixing_alert_redirect">Mixing e-Lerts</a></td>
-        
-          <td><a href="incomplete.html" class="btn btn-white table_button" id="incomplete_redirect">Incomplete e-Lerts</a></td>-->
-        </tr>
-      </table>
-
+      <div class="page-footer"></div>
     </div>
   </body>
 </html>
