--- a/public/admin/view_alert.html
+++ b/public/admin/view_alert.html
@@ -82,7 +82,7 @@
               </select>
             </td>
         </tr>
-        </tr>-->
+        </tr>
         <!-- ############################################################################ -->
         <tr >
             <td class="left_column">
@@ -159,15 +159,15 @@
 
       <table id="action_table" >
           <tr id="action_header">
-              <td class="shorten_td"    id="action_type">Type </td>
-              <td class="action_column" id="action_desc">Description </td>
-              <td class="action_column" id="action_owner">Owner </td>
-              <td class="date_td"       id="action_start">Start </td>
-              <td class="date_td"       id="action_deadline">Deadline </td>
-              <td class="date_td"       id="action_complete">Completed </td>
-              <td class="shorten_td"    id="action_state">State </td>
-              <td class="shorten_td"    id="action_email">Email Sent </td>
-              <td class="shorten_td"> Delete </td>
+              <td class="shorten_td"    id="action_type">Type</td>
+              <td class="action_column" id="action_desc">Description</td>
+              <td class="action_column" id="action_owner">Owner</td>
+              <td class="date_td"       id="action_start">Start</td>
+              <td class="date_td"       id="action_deadline">Deadline</td>
+              <td class="date_td"       id="action_complete">Completed</td>
+              <td class="shorten_td"    id="action_state">State</td>
+              <td class="shorten_td"    id="action_email">Email Sent</td>
+              <td class="shorten_td"> Delete</td>
           </tr>
         </table>
     </form>
@@ -176,7 +176,7 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <a href="/" class="btn btn-white table_button">Return to View Page</button></td>          
+          <td> <div class="btn btn-white table_button">Return to View Page</div></td>          
         </tr>
       </table>
     </div>
