Fixed bug with add action

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -78,7 +78,7 @@
                 <option value="Mixing"    >Mixing</option>
                 <option value="Cementing" >Cementing</option>
                 <option value="Automation">Automation</option>
-                <!--<option value="Office"      >Office</option>
+                <!--<option value="Office"    >Office</option>
                 <option value="Ship_Receive">Shipping/Receiving</option>-->
               </select>
             </td>
@@ -195,9 +195,9 @@
       </table>
     </div>
 
-    <script>
-      //var dropdown = document.querySelector('select');
-      //dropdown.className = dropdown.options[dropdown.selectedIndex].className;
-    </script>
+    <!--<script>
+      var dropdown = document.querySelector('select');
+      dropdown.className = dropdown.options[dropdown.selectedIndex].className;
+    </script>-->
   </body>
 </html>
