--- a/public/admin/view_alert.html
+++ b/public/admin/view_alert.html
@@ -176,7 +176,7 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <div class="btn btn-white table_button">Return to View Page</div></td>          
+          <td> <div class="btn btn-white table_button" id="view_return">Return to View Page</div></td>          
         </tr>
       </table>
     </div>
