--- a/public/admin/view_alert.html
+++ b/public/admin/view_alert.html
@@ -5,6 +5,7 @@
     <title>e-Alert</title>
      <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery-3.1.1.min.js'></script>
@@ -16,8 +17,13 @@
   <body id="create_page" class="disabled">
     <div class="page-header">
       <section class="user-logged-in">
-          <div id="Date"></div>
-          <div id="Time"></div>
+          <div id="clock" class="dark display">
+          <div class="weekdays"></div>
+          <div class="month_date"></div>
+          <div class="year"></div>
+          <div class="ampm"></div>
+          <div class="digits"></div>
+        </div>
       </section>
       <section class="page-title">
         <h2 >iQRQC - Grand Rapids - e-Lert View</h2>
@@ -181,9 +187,12 @@
       </table>
     </div>
 
-    <script>
+    <!--<script>
       var dropdown = document.querySelector('select');
       dropdown.className = dropdown.options[dropdown.selectedIndex].className;
-    </script>
+    </script>-->
+
+    <script type="text/javascript" src="../js/clock.js"></script>
+    <script type="text/javascript" src="../js/moment.js"></script>
   </body>
 </html>
