--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -6,6 +6,7 @@
     
     <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery-3.1.1.min.js'></script>
@@ -16,8 +17,13 @@
 
   <body id="create_page">
     <section class="user-logged-in">
-          <div id="Date"></div>
-          <div id="Time"></div>
+          <div id="clock" class="dark display">
+          <div class="weekdays">day</div>
+          <div class="month_date"></div>
+          <div class="year"></div>
+          <div class="ampm"></div>
+          <div class="digits"></div>
+        </div>
     </section>
     <section class="page-title">
       <h2 >iQRQC - Grand Rapids - e-Lert</h2>
@@ -199,5 +205,8 @@
       var dropdown = document.querySelector('select');
       dropdown.className = dropdown.options[dropdown.selectedIndex].className;
     </script>-->
+
+    <script type="text/javascript" src="../js/clock.js"></script>
+    <script type="text/javascript" src="../js/moment.js"></script>
   </body>
 </html>
