--- a/public/admin/view_mixing.html
+++ b/public/admin/view_mixing.html
@@ -6,6 +6,7 @@
     
     <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery-3.1.1.min.js'></script>
@@ -17,8 +18,13 @@
   <body id="view_mixing_page">
     <div class="page-header">
       <section class="user-logged-in">
-        <div id="Date"></div>
-        <div id="Time"></div>
+        <div id="clock" class="dark display">
+          <div class="weekdays"></div>
+          <div class="month_date"></div>
+          <div class="year"></div>
+          <div class="ampm"></div>
+          <div class="digits"></div>
+        </div>
       </section>
       <section class="page-title">
         <h2>iQRQC - Grand Rapids - Mixing View</h2>
@@ -72,7 +78,9 @@
           <td><a href="login" class="btn btn-white table_button" id="login_redirect">Login to edit</a></td>
         </tr>
       </table>
-
     </div>
+
+    <script type="text/javascript" src="../js/clock.js"></script>
+    <script type="text/javascript" src="../js/moment.js"></script>
   </body>
 </html>
