--- a/public/view_plant.html
+++ b/public/view_plant.html
@@ -5,7 +5,8 @@
     <title>Current e-Alerts</title>
     
     <!-- Load CSS -->  
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/clock.css">
 
     <!-- Load JavaScript files -->
     <script src='js/jquery-3.1.1.min.js'></script>
@@ -17,9 +18,15 @@
   <body id="view_page">
     <div class="page-header">
       <section class="user-logged-in">
-        <div id="Date"></div>
-        <div id="Time"></div>
+        <div id="clock" class="dark display">
+          <div class="weekdays"></div>
+          <div class="month_date"></div>
+          <div class="year"></div>
+          <div class="ampm"></div>
+          <div class="digits"></div>
+        </div>
       </section>
+      
       <section class="page-title">
         <h2>iQRQC - Grand Rapids - View</h2>
       </section>      
@@ -74,5 +81,8 @@
       </table>
 
     </div>
+
+    <script type="text/javascript" src="js/clock.js"></script>
+    <script type="text/javascript" src="js/moment.js"></script>
   </body>
 </html>
