Exec island for todoroff finished

--- a/public/admin/view_alert.html
+++ b/public/admin/view_alert.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery-3.1.1.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
     <script src='js/core.js'></script>
     <script src='js/js.cookie.js'></script>
   </head>
