--- a/public/admin/view_mixing.html
+++ b/public/admin/view_mixing.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery-3.1.1.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
     <script src='js/core.js'></script>
     <script src='js/js.cookie.js'></script>
   </head>
@@ -43,7 +45,6 @@
         <td class="days_column">Thursday</td>
         <td class="days_column">Friday</td>
       </tr>
-
     </table>      
     
 
