--- a/public/admin/create_mixing.html
+++ b/public/admin/create_mixing.html
@@ -5,13 +5,15 @@
     <title>e-Lert</title>
     
      <!-- Load CSS -->  
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style-min.css">
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery-3.1.1.min.js'></script>
-    <script src='js/core.js'></script>
-    <script src='js/js.cookie.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src='../js/core.js'></script>
+    <script src='../js/js.cookie.js'></script>
   </head>
 
 
@@ -26,10 +28,10 @@
         </div>
     </section>
     <section class="page-title">
-      <h2 >iQRQC - Mixing e-Lert</h2>
+      <h2 >iQRQC - Mixing - e-Lert</h2>
     </section>
     <section class="log-button ng-scope">
-      <img src="../images/logo.jpg" alt="" height="50px" width="75px">
+      <img src="../images/logo.jpg" alt="" height="50px" width="275px">
     </section>
     
 
@@ -118,7 +120,7 @@
         <!-- ############################################################################ -->
         <tr>
             <td class="left_column">
-              Repeat:
+              Repeat Issue:
             </td>
             <td class="right_column">
               <select class="box_length" id="recur">
