--- a/public/admin/index_jt.html
+++ b/public/admin/index_jt.html
@@ -2,20 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Current e-Alerts</title>
+    <title>Current Executive e-Alerts</title>
     
     <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src='js/jquery-3.1.1.min.js'></script>
-    <script src='js/core.js'></script>
-    <script src='js/js.cookie.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+    <script src='../js/core_jt.js'></script>
+    <script src='../js/js.cookie.js'></script>
   </head>
 
 
-  <body id="index_page">
+  <body id="jt_page">
     <div class="page-header">
       <section class="user-logged-in">
         <div id="clock" class="dark display">
@@ -27,7 +29,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC - Grand Rapids</h2>
+        <h2>iQRQC - Grand Rapids Executive</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
@@ -54,20 +56,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</button>
-              <button type="button" class="categories Quality"   id="Quality">Quality</button>
-              <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</button>
-              <button type="button" class="categories Inventory" id="Inventory">Inventory</button>
-              <button type="button" class="categories Scrap"     id="Scrap">Scrap</button>
+              <button type="button" class="categories Safety"     id="Safety">Safety / Environment</button>
+              <button type="button" class="categories Quality"    id="Quality">Quality</button>
+              <button type="button" class="categories Activity"   id="Activity">Sales / Business Development</button>
+              <button type="button" class="categories Product"    id="Product">Product &amp Process Design</button>
+              <button type="button" class="categories Purchasing" id="Purchasing">Purchasing</button>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <button type="button" class="categories Hr"        id="Hr">HR/ Labor</button>
-              <button type="button" class="categories Delivery"  id="Delivery">Delivery</button>
-              <button type="button" class="categories Operation" id="Operation">Operations Efficiency</button>
+              <button type="button" class="categories Hr"        id="Hr">Human Resource</button>
+              <button type="button" class="categories It"        id="It">Information Technology</button>
+              <button type="button" class="categories Operation" id="Operation">Operations</button>
               <button type="button" class="categories Supply"    id="Supply">Supply Chain</button>
-              <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</button>
+              <button type="button" class="categories Finance"   id="Finance">Finance</button>
           </td>
       </tr>
     </table>
