--- a/public/admin/view_jt.html
+++ b/public/admin/view_jt.html
@@ -29,7 +29,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC - Grand Rapids Executive - View</h2>
+        <h2>Grand Rapids Executive - View</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
