--- a/public/view_plant.html
+++ b/public/view_plant.html
@@ -5,7 +5,7 @@
     <title>Current e-Alerts</title>
     
     <!-- Load CSS -->  
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/clock.css">
 
     <!-- Load JavaScript files -->
