--- a/public/admin/index_auto.html
+++ b/public/admin/index_auto.html
@@ -17,7 +17,7 @@
   </head>
 
 
-  <body id="mixing_page">
+  <body id="auto_page">
       <section class="user-logged-in">
           <div id="clock" class="dark display">
           <div class="weekdays"></div>
