--- a/public/admin/view_auto.html
+++ b/public/admin/view_auto.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Current Mixing e-Alerts</title>
+    <title>Current e-Alerts</title>
     
-      <!-- Load CSS -->  
+    <!-- Load CSS -->  
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/clock.css">
 
@@ -17,9 +17,10 @@
   </head>
 
 
-  <body id="mixing_page">
+  <body id="view_auto_page">
+    <div class="page-header">
       <section class="user-logged-in">
-          <div id="clock" class="dark display">
+        <div id="clock" class="dark display">
           <div class="weekdays"></div>
           <div class="month_date"></div>
           <div class="year"></div>
@@ -28,11 +29,13 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC Automation</h2>
+        <h2>iQRQC - Grand Rapids - Automation View</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
       </section>
+    </div>
+    
 
     <table id="issues_table">
       <tr>
@@ -48,28 +51,35 @@
     <div class="mycontainer">
         <h3 class="h_format">e-Lert Categories</h3>
     </div>
+
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</button>
-              <button type="button" class="categories Quality"   id="Quality">Quality</button>
-              <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</button>
-              <button type="button" class="categories Inventory" id="Inventory">Inventory</button>
-              <button type="button" class="categories Scrap"     id="Scrap">Scrap</button>
+              <p class="categories Safety"    >Safety/ Environment</p>
+              <p class="categories Quality"   >Quality</p>
+              <p class="categories Activity"  >Activity (Sales)</p>
+              <p class="categories Inventory" >Inventory</p>
+              <p class="categories Scrap"     >Scrap</p>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <button type="button" class="categories Hr"        id="Hr">HR/ Labor</button>
-              <button type="button" class="categories Delivery"  id="Delivery">Delivery</button>
-              <button type="button" class="categories Operation" id="Operation">Operations Efficiency</button>
-              <button type="button" class="categories Supply"    id="Supply">Supply Chain</button>
-              <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</button>
+              <p class="categories Hr"        >HR/ Labor</p>
+              <p class="categories Delivery"  >Delivery</p>
+              <p class="categories Operation" >Operations Efficiency</p>
+              <p class="categories Supply"    >Supply Chain</p>
+              <p class="categories Misc"      >Miscellaneaous</p>
           </td>
       </tr>
     </table>
 
-    <div class="mycontainer"><div class="page-footer"></div></div>
+    <div class="mycontainer">
+      <table class="page-footer">
+        <tr>
+          <td><a href="login" class="btn btn-white table_button" id="login_redirect">Login to edit</a></td>
+        </tr>
+      </table>
+    </div>
 
     <script type="text/javascript" src="../js/clock.js"></script>
     <script type="text/javascript" src="../js/moment.js"></script>
