brought jt back into core.js

--- a/public/admin/disabled_exec.html
+++ b/public/admin/disabled_exec.html
@@ -11,12 +11,12 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src='js/core_jt.js'></script>
+    <script src='js/core.js'></script>
     <script src='js/js.cookie.js'></script>
   </head>
 
 
-  <body id="create_page" class="disabled">
+  <body id="create_jt_page" class="disabled">
     <div class="page-header">
       <section class="user-logged-in">
           <div id="clock" class="dark display">
@@ -56,7 +56,7 @@
               <select class="box_length" id="alert_type" disabled>
                 <option value="Safety"    id="Safety"    >Safety / Environment</option>
                 <option value="Activity"  id="Activity"  >Sales / Business Design</option>
-                <option value="Prod"      id="Product"   >Product &amp Process Design</option>
+                <option value="Product"   id="Product"   >Product &amp Process Design</option>
                 <option value="Quality"   id="Quality"   >Quality</option>
                 <option value="Operation" id="Operation" >Operations</option>
                 <option value="Purchasing"id="Purchasing">Purchasing</option>
