--- a/public/admin/create_jt.html
+++ b/public/admin/create_jt.html
@@ -12,12 +12,12 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src='../js/core_jt.js'></script>
+    <script src='../js/core.js'></script>
     <script src='../js/js.cookie.js'></script>
   </head>
 
 
-  <body id="create_page">
+  <body id="create_jt_page">
     <section class="user-logged-in">
           <div id="clock" class="dark display">
           <div class="weekdays"></div>
@@ -55,7 +55,7 @@
               <select class="box_length" id="alert_type" onchange="this.className=this.options[this.selectedIndex].className">
                 <option value="Safety"    id="Safety"    >Safety / Environment</option>
                 <option value="Activity"  id="Activity"  >Sales / Business Design</option>
-                <option value="Prod"      id="Product"   >Product &amp Process Design</option>
+                <option value="Product"   id="Product"   >Product &amp Process Design</option>
                 <option value="Quality"   id="Quality"   >Quality</option>
                 <option value="Operation" id="Operation" >Operations</option>
                 <option value="Purchasing"id="Purchasing">Purchasing</option>
@@ -182,7 +182,7 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
+          <td> <button class="btn btn-white table_button" id="add_jt_row" type="button">Add Action</button></td>
           <td> <button class="btn btn-white table_button" id="submit_jt">Submit</button></td>
           <td> <button class="btn btn-white table_button" id="jt_home">Return to Main Page</button></td>          
         </tr>
