--- a/public/admin/view_jt.html
+++ b/public/admin/view_jt.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <script src='../js/core_jt.js'></script>
+    <script src='../js/core.js'></script>
     <script src='../js/js.cookie.js'></script>
   </head>
 
