added a token system

--- a/public/admin/create_auto.html
+++ b/public/admin/create_auto.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
+    <script src='../js/jquery.min.js'></script>
     <script src='../js/core.js'></script>
     <script src='../js/js.cookie.js'></script>
   </head>
@@ -41,7 +39,8 @@
             <td id="info_header"><h3 class="mycontainer">Information</h3></td>        
             <td id="info_alert">
               <span >Alert ID:</span>
-              <span type="text" id="id_number"></span> 
+              <span type="text" id="id_number"></span>
+              
             </td>
         </tr>      
       </table>
@@ -182,9 +181,9 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" id="submit_auto">Submit</button></td>
-          <td> <button class="btn btn-white table_button" id="auto_home">Return to Main Page</button></td>          
+          <td> <button class="btn btn-white table_button" type="button" id="add_row">Add Action</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="submit_auto">Submit</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="auto_home">Return to Main Page</button></td>          
         </tr>
       </table>
     </div>
