--- a/public/admin/create_cad.html
+++ b/public/admin/create_cad.html
@@ -9,11 +9,9 @@
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-    <script src='js/core.js'></script>
-    <script src='js/js.cookie.js'></script>
+    <script src='../js/jquery.min.js'></script>
+    <script src='../js/core.js'></script>
+    <script src='../js/js.cookie.js'></script>
   </head>
 
 
@@ -188,9 +186,9 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" id="submit_cad">Submit</button></td>
-          <td> <button class="btn btn-white table_button" id="cad_home">Return to Main Page</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="add_row">Add Action</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="submit_cad">Submit</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="cad_home">Return to Main Page</button></td>
         </tr>
       </table>
     </div>
