--- a/public/admin/create_mixing.html
+++ b/public/admin/create_mixing.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
+    <script src='../js/jquery.min.js'></script>
     <script src='../js/core.js'></script>
     <script src='../js/js.cookie.js'></script>
   </head>
@@ -182,9 +180,9 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td> <button class="btn btn-white table_button" id="add_row" type="button">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" id="submit_mix">Submit</button></td>
-          <td> <button class="btn btn-white table_button" id="mixing_home">Return to Main Page</button></td>          
+          <td> <button class="btn btn-white table_button" type="button" id="add_row">Add Action</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="submit_mix">Submit</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="mixing_home">Return to Main Page</button></td>          
         </tr>
       </table>
     </div>
