--- a/public/admin/index_jt.html
+++ b/public/admin/index_jt.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="../css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
+    <script src='../js/jquery.min.js'></script>
     <script src='../js/core.js'></script>
     <script src='../js/js.cookie.js'></script>
   </head>
