--- a/public/admin/create_jt.html
+++ b/public/admin/create_jt.html
@@ -80,6 +80,7 @@
             </td>
             <td class="right_column">
               <select class="box_length" id="region">
+                <option value="---">---</option>
                 <option value="NA">North America</option>
                 <option value="SA">South America</option>
                 <option value="EU">Europe</option>
