Fixed JT post-its

--- a/public/admin/create_cad.html
+++ b/public/admin/create_cad.html
@@ -104,9 +104,7 @@
               Part Number:
             </td>
             <td class="right_column">
-              <select class="box_length" id="part_num">
-                
-              </select>              
+              <select class="box_length" id="part_num"></select>              
             </td>
         </tr>
         <!-- ############################################################################ -->
@@ -115,9 +113,7 @@
               Customer:
             </td>
             <td class="right_column">
-              <select class="box_length" id="customer">
-                
-              </select>        
+              <select class="box_length" id="customer"></select>        
             </td>
         </tr>
         <!-- ############################################################################ -->
