--- a/public/admin/create_jt.html
+++ b/public/admin/create_jt.html
@@ -104,7 +104,9 @@
               Part Number:
             </td>
             <td class="right_column">
-              <select class="box_length" id="part_num"></select>              
+              <select class="box_length" id="part_num">
+                <option value="None">---</option>
+              </select>              
             </td>
         </tr>
         <!-- ############################################################################ -->
@@ -113,7 +115,9 @@
               Customer:
             </td>
             <td class="right_column">
-              <select class="box_length" id="customer"></select>              
+              <select class="box_length" id="customer">
+                <option value="None">---</option>
+              </select>              
             </td>
         </tr>
         <!-- ############################################################################ -->
