--- a/public/admin/create_auto.html
+++ b/public/admin/create_auto.html
@@ -101,9 +101,7 @@
               Part Number:
             </td>
             <td class="right_column">
-              <select class="box_length" id="part_num">
-                
-              </select>              
+              <select class="box_length" id="part_num"> </select>              
             </td>
         </tr>
         <!-- ############################################################################ -->
@@ -112,8 +110,7 @@
               Customer:
             </td>
             <td class="right_column">
-              <select class="box_length" id="customer"> 
-              </select>              
+              <select class="box_length" id="customer"> </select>              
             </td>
         </tr>
         <!-- ############################################################################ -->
