made part list an input-datalist combo

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -108,12 +108,21 @@
             </td>
         </tr>
         <!-- ############################################################################ -->
-        <tr >
+        <!-- <tr >
             <td class="left_column">
               Part Number:
             </td>
             <td class="right_column">
               <select class="box_length" id="part_num"></select>              
+            </td>
+        </tr> -->
+        <tr >
+            <td class="left_column">
+              Part Number:
+            </td>
+            <td class="right_column">
+              <input type="text" class="box_length" id="part_num" list="part_list" style="overflow: scroll; "/>
+              <datalist id="part_list"></datalist>              
             </td>
         </tr>
         <!-- ############################################################################ -->
