login stability, new home page

--- a/public/admin/index_auto.html
+++ b/public/admin/index_auto.html
@@ -26,7 +26,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC Automation</h2>
+        <h2>iQRQC - Grand Rapids - Automation</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
