--- a/public/admin/view_plant.html
+++ b/public/admin/view_plant.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>View e-Alerts</title>
+    <title>Current e-Alerts</title>
     
     <!-- Load CSS -->  
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/clock.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/clock.css">
 
     <!-- Load JavaScript files -->
-    <script src='../js/jquery.min.js'></script>
-    <script src='../js/core.js'></script>
-    <script src='../js/js.cookie.js'></script>
+    <script src='js/jquery.min.js'></script>
+    <script src='js/core.js'></script>
+    <script src='js/js.cookie.js'></script>
   </head>
 
 
-  <body id="view_jt_page">
+  <body id="view_page">
     <div class="page-header">
       <section class="user-logged-in">
         <div id="clock" class="dark display">
@@ -26,8 +26,9 @@
           <div class="digits"></div>
         </div>
       </section>
+      
       <section class="page-title">
-        <h2>iQRQC - Grand Rapids - Executive View</h2>
+        <h2>iQRQC - Grand Rapids - View</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
@@ -53,20 +54,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <p class="categories Safety"    >Safety / Environment</p>
+              <p class="categories Safety"    >Safety/ Environment</p>
               <p class="categories Quality"   >Quality</p>
-              <p class="categories Activity"  >Sales / Business Development</p>
-              <p class="categories Product"   >Product &amp Process Design</p>
-              <p class="categories Purchasing">Purchasing</p>
+              <p class="categories Activity"  >Activity (Sales)</p>
+              <p class="categories Inventory" >Inventory</p>
+              <p class="categories Scrap"     >Scrap</p>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <p class="categories Hr"        >Human Resource</p>
-              <p class="categories It"        >Information Technology</p>
-              <p class="categories Operation" >Operations</p>
+              <p class="categories Hr"        >HR/ Labor</p>
+              <p class="categories Delivery"  >Delivery</p>
+              <p class="categories Operation" >Operations Efficiency</p>
               <p class="categories Supply"    >Supply Chain</p>
-              <p class="categories Finance"   >Finance</p>
+              <p class="categories Misc"      >Miscellaneaous</p>
           </td>
       </tr>
     </table>
@@ -77,9 +78,10 @@
           <td><a href="login" class="btn btn-white table_button" id="login_redirect">Login to edit</a></td>
         </tr>
       </table>
+
     </div>
 
-    <script type="text/javascript" src="../js/clock.js"></script>
-    <script type="text/javascript" src="../js/moment.js"></script>
+    <script type="text/javascript" src="js/clock.js"></script>
+    <script type="text/javascript" src="js/moment.js"></script>
   </body>
 </html>
