--- a/public/admin/index_cad.html
+++ b/public/admin/index_cad.html
@@ -27,7 +27,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC - Cadillac</h2>
+        <h2>iQRQC - Cadillac - Plant</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
