--- a/public/admin/index_jt.html
+++ b/public/admin/index_jt.html
@@ -27,7 +27,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC - Grand Rapids Executive</h2>
+        <h2>iQRQC - Grand Rapids - Executive</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
