--- a/public/admin/view_cad.html
+++ b/public/admin/view_cad.html
@@ -28,7 +28,7 @@
       </section>
       
       <section class="page-title">
-        <h2>iQRQC - Cadillac - View</h2>
+        <h2>iQRQC - Cadillac - Plant View</h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
