--- a/public/admin/view_jt.html
+++ b/public/admin/view_jt.html
@@ -53,20 +53,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <p class="categories Safety"    >Safety / Environment</p>
-              <p class="categories Quality"   >Quality</p>
-              <p class="categories Activity"  >Sales / Business Development</p>
-              <p class="categories Product"   >Product &amp Process Design</p>
-              <p class="categories Purchasing">Purchasing</p>
+              <div class="categories Safety"    >Safety / Environment</div>
+              <div class="categories Quality"   >Quality</div>
+              <div class="categories Activity"  >Sales / Business Development</div>
+              <div class="categories Product"   >Product &amp Process Design</div>
+              <div class="categories Purchasing">Purchasing</div>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <p class="categories Hr"        >Human Resource</p>
-              <p class="categories It"        >Information Technology</p>
-              <p class="categories Operation" >Operations</p>
-              <p class="categories Supply"    >Supply Chain</p>
-              <p class="categories Finance"   >Finance</p>
+              <div class="categories Hr"        >Human Resource</div>
+              <div class="categories It"        >Information Technology</div>
+              <div class="categories Operation" >Operations</div>
+              <div class="categories Supply"    >Supply Chain</div>
+              <div class="categories Finance"   >Finance</div>
           </td>
       </tr>
     </table>
