--- a/public/admin/view_mixing.html
+++ b/public/admin/view_mixing.html
@@ -53,20 +53,20 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <p class="categories Safety"    >Safety/ Environment</p>
-              <p class="categories Quality"   >Quality</p>
-              <p class="categories Activity"  >Activity (Sales)</p>
-              <p class="categories Inventory" >Inventory</p>
-              <p class="categories Scrap"     >Scrap</p>
+              <div class="categories Safety"    >Safety/ Environment</div>
+              <div class="categories Quality"   >Quality</div>
+              <div class="categories Activity"  >Activity (Sales)</div>
+              <div class="categories Inventory" >Inventory</div>
+              <div class="categories Scrap"     >Scrap</div>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <p class="categories Hr"        >HR/ Labor</p>
-              <p class="categories Delivery"  >Delivery</p>
-              <p class="categories Operation" >Operations Efficiency</p>
-              <p class="categories Supply"    >Supply Chain</p>
-              <p class="categories Misc"      >Miscellaneaous</p>
+              <div class="categories Hr"        >HR/ Labor</div>
+              <div class="categories Delivery"  >Delivery</div>
+              <div class="categories Operation" >Operations Efficiency</div>
+              <div class="categories Supply"    >Supply Chain</div>
+              <div class="categories Misc"      >Miscellaneaous</div>
           </td>
       </tr>
     </table>
