--- a/public/view_selection.html
+++ b/public/view_selection.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QRQC Selection Page</title>
+  <title>Post-It Home Page</title>
 
   <link rel="stylesheet" type="text/css" href="css/select_page.css">
 
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1 align="center">Select a QRQC Level</h1>
+  <h1 align="center">Select a QRQC Post-It Level</h1>
   <div id="interface_body">
 
     <h2 align="center">Grand Rapids</h2>
@@ -25,8 +25,8 @@
       <span>
         <a href="/view_auto" class="btn btn-white pulsor">Automation</a>
       </span>
-      <span>
-        <a href="/view_cement" class="btn btn-white pulsor" disabled>Cementing</a>
+      <span disabled>
+        <a href="" class="btn btn-white pulsor">Cementing</a>
       </span>
     </div> 
 
