Huge rework, all levels use single View, index, create page. Core.js trimmed down. Removed obsolete HTML

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -25,8 +25,9 @@
           <div class="digits"></div>
         </div>
     </section>
+    
     <section class="page-title">
-      <h2>iQRQC - Grand Rapids - e-Lert</h2>
+      <h2 id="iqrqc_header"></h2>
     </section>
     <section class="log-button ng-scope">
       <img src="../images/logo.jpg" alt="" height="50px" width="250px">
@@ -202,7 +203,7 @@
         <tr>
           <td> <button class="btn btn-white table_button" type="button" id="add_row">Add Action</button></td>
           <td> <button class="btn btn-white table_button" type="button" id="submit_plant">Submit</button></td>
-          <td> <button class="btn btn-white table_button" type="button" id="return_home">Return to Main Page</button></td>          
+          <td> <button class="btn btn-white table_button" type="button" id="return_home">Return to Index</button></td>          
         </tr>
       </table>
     </div>
