Exec page is now working with new style

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -202,7 +202,7 @@
       <table class="page-footer">
         <tr>
           <td> <button class="btn btn-white table_button" type="button" id="add_row">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" type="button" id="submit_plant">Submit</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="submit">Submit</button></td>
           <td> <button class="btn btn-white table_button" type="button" id="return_home">Return to Index</button></td>          
         </tr>
       </table>
