--- a/public/admin/create_jt.html
+++ b/public/admin/create_jt.html
@@ -15,7 +15,7 @@
   </head>
 
 
-  <body id="create_jt_page">
+  <body id="create_jt">
     <section class="user-logged-in">
           <div id="clock" class="dark display">
           <div class="weekdays"></div>
@@ -186,7 +186,7 @@
       <table class="page-footer">
         <tr>
           <td> <button class="btn btn-white table_button" type="button" id="add_jt_row">Add Action</button></td>
-          <td> <button class="btn btn-white table_button" type="button" id="submit_jt">Submit</button></td>
+          <td> <button class="btn btn-white table_button" type="button" id="submit">Submit</button></td>
           <td> <button class="btn btn-white table_button" type="button" id="jt_home">Return to Main Page</button></td>          
         </tr>
       </table>
