--- a/public/admin/index_jt.html
+++ b/public/admin/index_jt.html
@@ -15,7 +15,7 @@
   </head>
 
 
-  <body id="jt_page">
+  <body id="index_page">
     <div class="page-header">
       <section class="user-logged-in">
         <div id="clock" class="dark display">
@@ -27,7 +27,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC - Grand Rapids - Executive</h2>
+        <h2 id="iqrqc_header"></h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
@@ -73,7 +73,9 @@
     </table>
 
     <div class="mycontainer">
-      <div class="page-footer"></div>
+      <div class="page-footer">
+        <a href="/" class="btn btn-white">Logout of Post-It</a>
+      </div>
     </div>
 
     <script type="text/javascript" src="../js/clock.js"></script>
