--- a/public/admin/view_jt.html
+++ b/public/admin/view_jt.html
@@ -15,7 +15,7 @@
   </head>
 
 
-  <body id="view_jt_page">
+  <body id="view_page">
     <div class="page-header">
       <section class="user-logged-in">
         <div id="clock" class="dark display">
@@ -27,7 +27,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2>iQRQC - Grand Rapids - Executive View</h2>
+        <h2 id="iqrqc_header"></h2>
       </section>      
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
