--- a/public/admin/disabled_exec.html
+++ b/public/admin/disabled_exec.html
@@ -13,8 +13,7 @@
     <script src='../js/js.cookie.js'></script>
   </head>
 
-
-  <body id="create_jt_page" class="disabled">
+  <body id="create_jt" class="disabled">
     <div class="page-header">
       <section class="user-logged-in">
           <div id="clock" class="dark display">
