Email sending through Lotus now working

--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -25,6 +25,9 @@
                 <p class="error"></p>
             </div>
             <form id="login_form" ng-submit="handleLoginForm()" >
+				<!-- <div>
+                    <div id="login_button" class="btn btn-white" method="post" style="width: 100%; text-align: center; ">Login is now working</div>
+                </div> -->
                 <div>
                     <input onkeypress="return Press_Enter(event);" id="username" type="text" name="username" placeholder="Username" required />
                 </div>
@@ -34,6 +37,10 @@
                 <div>
                     <button id="login_button" type="button" class="btn btn-white" method="post">Login</button>
                 </div>
+				
+				<!-- <div>
+                    <a href='/' id="login_button" class="btn btn-white" style="width: 100%; text-align: center; ">Go back to main page</a>
+                </div> -->
             </form>
         </div>
 
