cadillac part numbers now live

--- a/public/home_page.html
+++ b/public/home_page.html
@@ -10,9 +10,10 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/home_page.js"></script>
   <script src='js/js.cookie.js'></script>
+  <script src='js/core.js'></script>
 </head>
 
-<body class="home_page">
+<body class="home_page" id="home_page">
   <h1 align="center">Select a QRQC Post-It Level</h1>
   <div id="interface_body">
 
