Add a page for the add/delete of owners

--- a/public/home_page.html
+++ b/public/home_page.html
@@ -46,6 +46,16 @@
       </span>
     </div>
   </div>
+
+  <div id="interface_body">
+    <h2 align="center">Utilities</h2>
+    <div class="Cell">
+      <span>
+        <a href="/login_util" class="btn btn-white pulsor">Modify Owners</a>
+      </span>
+    </div>
+  </div>
+
   
 </body>
 </html>
