fixed action owner bug

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -11,6 +11,7 @@
     <!-- Load JavaScript files -->
     <script src='../js/jquery.min.js'></script>
     <script src='../js/core.js'></script>
+    <!-- <script src='../js/core_test.js'></script> -->
     <script src='../js/js.cookie.js'></script>
   </head>
 
