--- a/public/admin/disabled_view.html
+++ b/public/admin/disabled_view.html
@@ -26,7 +26,7 @@
         </div>
       </section>
       <section class="page-title">
-        <h2 >iQRQC - Grand Rapids - e-Lert View</h2>
+        <h2 id="iqrqc_header"></h2>
       </section>
       <section class="log-button ng-scope">
         <img src="../images/logo.jpg" alt="" height="50px" width="250px">
